Introduce `BlockClusteringWizard` for UI-based block discovery, refactor `BlockSpec` to support ranks, add block-based DataType, and extend block handling in clustering algorithms (`TscScored`, `BlocksUtil`, `ClusterRunner`).